# dj-social-auth-google

./: .gitignore  pyproject.toml  readme.md
project/: settings.py  social_adapter.py  urls.py  views.py
tests/: test_dj_social_auth_google.py
